This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Python/coreconfig.c: Fix _Py_wstrlist_copy()
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: berker.peksag, izbyshev, serhiy.storchaka, vstinner
Priority: normal Keywords: patch

Created on 2018-08-24 22:37 by izbyshev, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 8910 merged izbyshev, 2018-08-24 22:38
PR 8922 merged izbyshev, 2018-08-25 13:08
Messages (4)
msg324021 - (view) Author: Alexey Izbyshev (izbyshev) * (Python triager) Date: 2018-08-24 22:37
The return value of PyMem_RawMalloc() is not checked for NULL at https://github.com/python/cpython/blob/ef8861c112ed1dac9351958c121bc24ca4ecdb08/Python/coreconfig.c#L71.

Reported by Svace static analyzer.
msg324023 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2018-08-24 23:34
New changeset eb746dbae8b320758ee08f811316d7f283435cc0 by Victor Stinner (Alexey Izbyshev) in branch 'master':
bpo-34492: Python/coreconfig.c: Fix _Py_wstrlist_copy() (GH-8910)
https://github.com/python/cpython/commit/eb746dbae8b320758ee08f811316d7f283435cc0
msg324078 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2018-08-25 16:47
New changeset 388bd4bd7622f6781260ed388f7c76b673adb0e1 by Victor Stinner (Alexey Izbyshev) in branch '3.7':
[3.7] bpo-34492: Modules/main.c: Fix copy_wstrlist() (GH-8910) (GH-8922)
https://github.com/python/cpython/commit/388bd4bd7622f6781260ed388f7c76b673adb0e1
msg324079 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2018-08-25 16:47
Thanks Alexey Izbyshev for the bug report and the fix for 3.7 and master branches!
History
Date User Action Args
2022-04-11 14:59:05adminsetgithub: 78673
2018-08-25 16:47:27vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg324079

stage: patch review -> resolved
2018-08-25 16:47:00vstinnersetmessages: + msg324078
2018-08-25 13:20:35izbyshevsettitle: Python/coreconfig.c: Missing NULL check in _Py_wstrlist_copy() -> Python/coreconfig.c: Fix _Py_wstrlist_copy()
2018-08-25 13:19:09izbyshevsetversions: + Python 3.7
2018-08-25 13:08:50izbyshevsetpull_requests: + pull_request8395
2018-08-24 23:35:00vstinnersetmessages: + msg324023
2018-08-24 22:38:16izbyshevsetkeywords: + patch
stage: patch review
pull_requests: + pull_request8382
2018-08-24 22:37:17izbyshevcreate