[3.7] bpo-34492: Modules/main.c: Fix copy_wstrlist() (GH-8910)

* Add missing NULL check reported by Svace static analyzer.
* Fix clear_wstrlist() call on a wrong list.

(cherry picked from commit eb746dbae8b320758ee08f811316d7f283435cc0)

Co-authored-by: Alexey Izbyshev <izbyshev@ispras.ru>